Fix text contrast

--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@ body {
 
 h1 {
   font-size: 10vw;
-  color: #808080!important;
+  color: #222!important;
   letter-spacing: -2px;
 }
 
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #808080;
+  color: #222;
   font-family: "Perpetua Titling MT";
 //  text-transform: uppercase;
 }
@@ -38,7 +38,7 @@ nav {
 }
 
 nav a {
-  color: #808080;
+  color: #222;
 }
 
 nav a:hover {
@@ -80,6 +80,9 @@ img.header_image {
 
 #book {
   background: #222;
+  nav a {
+    color: $rosequartz;
+  }
   p, table {color: $rosequartz;}
 
   h1,h2,h3,h4,h5,h6 {
